compiler/y.output

state 0
	$accept: .translation_unit $end 
	initial_declaration: .    (3)

	REQUIRE  shift 5
	.  reduce 3 (src line 92)

	require_list  goto 3
	require_declaration  goto 4
	translation_unit  goto 1
	initial_declaration  goto 2

state 1
	$accept:  translation_unit.$end 
	translation_unit:  translation_unit.definition_or_statement 

	$end  accept
	IF  shift 23
	FOR  shift 24
	RETURN_T  shift 25
	BREAK  shift 26
	CONTINUE  shift 27
	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 33
	EXCLAMATION  shift 57
	VOID_T  shift 28
	BOOLEAN_T  shift 29
	INT_T  shift 30
	DOUBLE_T  shift 31
	STRING_T  shift 32
	NEW  shift 49
	CLASS_T  shift 11
	THIS_T  shift 48
	.  error

	expression  goto 12
	assignment_expression  goto 22
	logical_and_expression  goto 36
	logical_or_expression  goto 34
	equality_expression  goto 39
	relational_expression  goto 50
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 35
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38
	statement  goto 9
	if_statement  goto 13
	for_statement  goto 14
	return_statement  goto 15
	break_statement  goto 16
	continue_statement  goto 17
	declaration_statement  goto 18
	basic_type_specifier  goto 19
	type_specifier  goto 10
	class_type_specifier  goto 21
	array_type_specifier  goto 20
	definition_or_statement  goto 6
	function_definition  goto 7
	class_definition  goto 8

state 2
	translation_unit:  initial_declaration.definition_or_statement 

	IF  shift 23
	FOR  shift 24
	RETURN_T  shift 25
	BREAK  shift 26
	CONTINUE  shift 27
	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 33
	EXCLAMATION  shift 57
	VOID_T  shift 28
	BOOLEAN_T  shift 29
	INT_T  shift 30
	DOUBLE_T  shift 31
	STRING_T  shift 32
	NEW  shift 49
	CLASS_T  shift 11
	THIS_T  shift 48
	.  error

	expression  goto 12
	assignment_expression  goto 22
	logical_and_expression  goto 36
	logical_or_expression  goto 34
	equality_expression  goto 39
	relational_expression  goto 50
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 35
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38
	statement  goto 9
	if_statement  goto 13
	for_statement  goto 14
	return_statement  goto 15
	break_statement  goto 16
	continue_statement  goto 17
	declaration_statement  goto 18
	basic_type_specifier  goto 19
	type_specifier  goto 10
	class_type_specifier  goto 21
	array_type_specifier  goto 20
	definition_or_statement  goto 58
	function_definition  goto 7
	class_definition  goto 8

state 3
	initial_declaration:  require_list.    (4)
	require_list:  require_list.require_declaration 

	REQUIRE  shift 5
	.  reduce 4 (src line 97)

	require_declaration  goto 59

state 4
	require_list:  require_declaration.    (5)

	.  reduce 5 (src line 102)


state 5
	require_declaration:  REQUIRE.package_name SEMICOLON 

	IDENTIFIER  shift 61
	.  error

	package_name  goto 60

state 6
	translation_unit:  translation_unit definition_or_statement.    (2)

	.  reduce 2 (src line 90)


state 7
	definition_or_statement:  function_definition.    (10)

	.  reduce 10 (src line 125)


state 8
	definition_or_statement:  class_definition.    (11)

	.  reduce 11 (src line 127)


state 9
	definition_or_statement:  statement.    (12)

	.  reduce 12 (src line 128)


state 10
	function_definition:  type_specifier.IDENTIFIER LP parameter_list RP block 
	function_definition:  type_specifier.IDENTIFIER LP RP block 
	function_definition:  type_specifier.IDENTIFIER LP parameter_list RP SEMICOLON 
	function_definition:  type_specifier.IDENTIFIER LP RP SEMICOLON 
	declaration_statement:  type_specifier.IDENTIFIER SEMICOLON 
	declaration_statement:  type_specifier.IDENTIFIER ASSIGN_T expression SEMICOLON 

	IDENTIFIER  shift 62
	.  error


state 11
	class_definition:  CLASS_T.IDENTIFIER extends LC $$120 member_declaration_list RC 
	class_definition:  CLASS_T.IDENTIFIER extends LC $$122 RC 

	IDENTIFIER  shift 63
	.  error


state 12
	expression:  expression.COMMA assignment_expression 
	statement:  expression.SEMICOLON 

	SEMICOLON  shift 65
	COMMA  shift 64
	.  error


state 13
	statement:  if_statement.    (97)

	.  reduce 97 (src line 515)


state 14
	statement:  for_statement.    (98)

	.  reduce 98 (src line 516)


state 15
	statement:  return_statement.    (99)

	.  reduce 99 (src line 517)


state 16
	statement:  break_statement.    (100)

	.  reduce 100 (src line 518)


state 17
	statement:  continue_statement.    (101)

	.  reduce 101 (src line 519)


state 18
	statement:  declaration_statement.    (102)

	.  reduce 102 (src line 520)


state 19
	array_type_specifier:  basic_type_specifier.LB RB 
	type_specifier:  basic_type_specifier.    (22)

	LB  shift 66
	.  reduce 22 (src line 178)


state 20
	array_type_specifier:  array_type_specifier.LB RB 
	type_specifier:  array_type_specifier.    (23)

	LB  shift 67
	.  reduce 23 (src line 183)


state 21
	type_specifier:  class_type_specifier.    (24)

	.  reduce 24 (src line 184)


state 22
	expression:  assignment_expression.    (35)

	.  reduce 35 (src line 239)


state 23
	if_statement:  IF.expression block 
	if_statement:  IF.expression block ELSE block 
	if_statement:  IF.expression block elif_list 
	if_statement:  IF.expression block elif_list ELSE block 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	expression  goto 68
	assignment_expression  goto 22
	logical_and_expression  goto 36
	logical_or_expression  goto 34
	equality_expression  goto 39
	relational_expression  goto 50
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 35
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 24
	for_statement:  FOR.LP expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RP block 

	LP  shift 70
	.  error


state 25
	return_statement:  RETURN_T.expression_opt SEMICOLON 
	expression_opt: .    (110)

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  reduce 110 (src line 562)

	expression  goto 72
	expression_opt  goto 71
	assignment_expression  goto 22
	logical_and_expression  goto 36
	logical_or_expression  goto 34
	equality_expression  goto 39
	relational_expression  goto 50
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 35
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 26
	break_statement:  BREAK.SEMICOLON 

	SEMICOLON  shift 73
	.  error


state 27
	continue_statement:  CONTINUE.SEMICOLON 

	SEMICOLON  shift 74
	.  error


state 28
	basic_type_specifier:  VOID_T.    (13)

	.  reduce 13 (src line 134)


state 29
	basic_type_specifier:  BOOLEAN_T.    (14)

	.  reduce 14 (src line 139)


state 30
	basic_type_specifier:  INT_T.    (15)

	.  reduce 15 (src line 143)


state 31
	basic_type_specifier:  DOUBLE_T.    (16)

	.  reduce 16 (src line 147)


state 32
	basic_type_specifier:  STRING_T.    (17)

	.  reduce 17 (src line 151)


state 33
	class_type_specifier:  IDENTIFIER.    (18)
	array_type_specifier:  IDENTIFIER.LB RB 
	primary_expression:  IDENTIFIER.    (63)
	primary_no_new_array:  IDENTIFIER.LB expression RB 

	LB  shift 75
	IDENTIFIER  reduce 18 (src line 156)
	.  reduce 63 (src line 352)


state 34
	assignment_expression:  logical_or_expression.    (37)
	logical_or_expression:  logical_or_expression.LOGICAL_OR logical_and_expression 

	LOGICAL_OR  shift 76
	.  reduce 37 (src line 247)


state 35
	assignment_expression:  primary_expression.ASSIGN_T assignment_expression 
	postfix_expression:  primary_expression.    (60)
	primary_no_new_array:  primary_expression.DOT IDENTIFIER 
	primary_no_new_array:  primary_expression.LP argument_list RP 
	primary_no_new_array:  primary_expression.LP RP 

	LP  shift 79
	ASSIGN_T  shift 77
	DOT  shift 78
	.  reduce 60 (src line 346)


state 36
	logical_or_expression:  logical_and_expression.    (39)
	logical_and_expression:  logical_and_expression.LOGICAL_AND equality_expression 

	LOGICAL_AND  shift 80
	.  reduce 39 (src line 255)


state 37
	primary_expression:  primary_no_new_array.    (61)
	primary_no_new_array:  primary_no_new_array.LB expression RB 

	LB  shift 81
	.  reduce 61 (src line 349)


state 38
	primary_expression:  array_creation.    (62)

	.  reduce 62 (src line 351)


state 39
	logical_and_expression:  equality_expression.    (41)
	equality_expression:  equality_expression.EQ relational_expression 
	equality_expression:  equality_expression.NE relational_expression 

	EQ  shift 82
	NE  shift 83
	.  reduce 41 (src line 263)


state 40
	primary_no_new_array:  LP.expression RP 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	expression  goto 84
	assignment_expression  goto 22
	logical_and_expression  goto 36
	logical_or_expression  goto 34
	equality_expression  goto 39
	relational_expression  goto 50
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 35
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 41
	primary_no_new_array:  INT_LITERAL.    (70)

	.  reduce 70 (src line 385)


state 42
	primary_no_new_array:  DOUBLE_LITERAL.    (71)

	.  reduce 71 (src line 391)


state 43
	primary_no_new_array:  STRING_LITERAL.    (72)

	.  reduce 72 (src line 397)


state 44
	primary_no_new_array:  TRUE_T.    (73)

	.  reduce 73 (src line 402)


state 45
	primary_no_new_array:  FALSE_T.    (74)

	.  reduce 74 (src line 407)


state 46
	primary_no_new_array:  NULL_T.    (75)

	.  reduce 75 (src line 412)


state 47
	primary_no_new_array:  array_literal.    (76)

	.  reduce 76 (src line 417)


state 48
	primary_no_new_array:  THIS_T.    (77)

	.  reduce 77 (src line 418)


state 49
	primary_no_new_array:  NEW.IDENTIFIER LP RP 
	primary_no_new_array:  NEW.IDENTIFIER LP argument_list RP 
	primary_no_new_array:  NEW.IDENTIFIER DOT IDENTIFIER LP RP 
	primary_no_new_array:  NEW.IDENTIFIER DOT IDENTIFIER LP argument_list RP 
	array_creation:  NEW.basic_type_specifier dimension_expression_list 
	array_creation:  NEW.basic_type_specifier dimension_expression_list dimension_list 
	array_creation:  NEW.class_type_specifier dimension_expression_list 
	array_creation:  NEW.class_type_specifier dimension_expression_list dimension_list 

	IDENTIFIER  shift 85
	VOID_T  shift 28
	BOOLEAN_T  shift 29
	INT_T  shift 30
	DOUBLE_T  shift 31
	STRING_T  shift 32
	.  error

	basic_type_specifier  goto 86
	class_type_specifier  goto 87

state 50
	equality_expression:  relational_expression.    (43)
	relational_expression:  relational_expression.GT additive_expression 
	relational_expression:  relational_expression.GE additive_expression 
	relational_expression:  relational_expression.LT additive_expression 
	relational_expression:  relational_expression.LE additive_expression 

	GT  shift 88
	GE  shift 89
	LT  shift 90
	LE  shift 91
	.  reduce 43 (src line 271)


state 51
	array_literal:  LC.expression_list RC 
	array_literal:  LC.expression_list COMMA RC 
	expression_list: .    (93)

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  reduce 93 (src line 495)

	assignment_expression  goto 93
	logical_and_expression  goto 36
	logical_or_expression  goto 34
	equality_expression  goto 39
	relational_expression  goto 50
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 35
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38
	expression_list  goto 92

state 52
	relational_expression:  additive_expression.    (46)
	additive_expression:  additive_expression.ADD multiplicative_expression 
	additive_expression:  additive_expression.SUB multiplicative_expression 

	ADD  shift 94
	SUB  shift 95
	.  reduce 46 (src line 284)


state 53
	additive_expression:  multiplicative_expression.    (51)
	multiplicative_expression:  multiplicative_expression.MUL unary_expression 
	multiplicative_expression:  multiplicative_expression.DIV unary_expression 

	MUL  shift 96
	DIV  shift 97
	.  reduce 51 (src line 307)


state 54
	multiplicative_expression:  unary_expression.    (54)

	.  reduce 54 (src line 320)


state 55
	unary_expression:  postfix_expression.    (57)

	.  reduce 57 (src line 333)


state 56
	unary_expression:  SUB.unary_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	unary_expression  goto 98
	postfix_expression  goto 55
	primary_expression  goto 99
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 57
	unary_expression:  EXCLAMATION.unary_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	unary_expression  goto 100
	postfix_expression  goto 55
	primary_expression  goto 99
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 58
	translation_unit:  initial_declaration definition_or_statement.    (1)

	.  reduce 1 (src line 88)


state 59
	require_list:  require_list require_declaration.    (6)

	.  reduce 6 (src line 104)


state 60
	require_declaration:  REQUIRE package_name.SEMICOLON 
	package_name:  package_name.DOT IDENTIFIER 

	SEMICOLON  shift 101
	DOT  shift 102
	.  error


state 61
	package_name:  IDENTIFIER.    (8)

	.  reduce 8 (src line 115)


state 62
	function_definition:  type_specifier IDENTIFIER.LP parameter_list RP block 
	function_definition:  type_specifier IDENTIFIER.LP RP block 
	function_definition:  type_specifier IDENTIFIER.LP parameter_list RP SEMICOLON 
	function_definition:  type_specifier IDENTIFIER.LP RP SEMICOLON 
	declaration_statement:  type_specifier IDENTIFIER.SEMICOLON 
	declaration_statement:  type_specifier IDENTIFIER.ASSIGN_T expression SEMICOLON 

	LP  shift 103
	SEMICOLON  shift 104
	ASSIGN_T  shift 105
	.  error


state 63
	class_definition:  CLASS_T IDENTIFIER.extends LC $$120 member_declaration_list RC 
	class_definition:  CLASS_T IDENTIFIER.extends LC $$122 RC 
	extends: .    (124)

	COLON  shift 107
	.  reduce 124 (src line 643)

	extends  goto 106

state 64
	expression:  expression COMMA.assignment_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	assignment_expression  goto 108
	logical_and_expression  goto 36
	logical_or_expression  goto 34
	equality_expression  goto 39
	relational_expression  goto 50
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 35
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 65
	statement:  expression SEMICOLON.    (96)

	.  reduce 96 (src line 509)


state 66
	array_type_specifier:  basic_type_specifier LB.RB 

	RB  shift 109
	.  error


state 67
	array_type_specifier:  array_type_specifier LB.RB 

	RB  shift 110
	.  error


state 68
	expression:  expression.COMMA assignment_expression 
	if_statement:  IF expression.block 
	if_statement:  IF expression.block ELSE block 
	if_statement:  IF expression.block elif_list 
	if_statement:  IF expression.block elif_list ELSE block 

	LC  shift 112
	COMMA  shift 64
	.  error

	block  goto 111

state 69
	primary_expression:  IDENTIFIER.    (63)
	primary_no_new_array:  IDENTIFIER.LB expression RB 

	LB  shift 113
	.  reduce 63 (src line 352)


state 70
	for_statement:  FOR LP.expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RP block 
	expression_opt: .    (110)

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  reduce 110 (src line 562)

	expression  goto 72
	expression_opt  goto 114
	assignment_expression  goto 22
	logical_and_expression  goto 36
	logical_or_expression  goto 34
	equality_expression  goto 39
	relational_expression  goto 50
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 35
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 71
	return_statement:  RETURN_T expression_opt.SEMICOLON 

	SEMICOLON  shift 115
	.  error


state 72
	expression:  expression.COMMA assignment_expression 
	expression_opt:  expression.    (111)

	COMMA  shift 64
	.  reduce 111 (src line 567)


state 73
	break_statement:  BREAK SEMICOLON.    (113)

	.  reduce 113 (src line 576)


state 74
	continue_statement:  CONTINUE SEMICOLON.    (114)

	.  reduce 114 (src line 583)


state 75
	array_type_specifier:  IDENTIFIER LB.RB 
	primary_no_new_array:  IDENTIFIER LB.expression RB 

	LP  shift 40
	LC  shift 51
	RB  shift 116
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	expression  goto 117
	assignment_expression  goto 22
	logical_and_expression  goto 36
	logical_or_expression  goto 34
	equality_expression  goto 39
	relational_expression  goto 50
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 35
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 76
	logical_or_expression:  logical_or_expression LOGICAL_OR.logical_and_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	logical_and_expression  goto 118
	equality_expression  goto 39
	relational_expression  goto 50
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 99
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 77
	assignment_expression:  primary_expression ASSIGN_T.assignment_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	assignment_expression  goto 119
	logical_and_expression  goto 36
	logical_or_expression  goto 34
	equality_expression  goto 39
	relational_expression  goto 50
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 35
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 78
	primary_no_new_array:  primary_expression DOT.IDENTIFIER 

	IDENTIFIER  shift 120
	.  error


state 79
	primary_no_new_array:  primary_expression LP.argument_list RP 
	primary_no_new_array:  primary_expression LP.RP 

	LP  shift 40
	RP  shift 122
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	assignment_expression  goto 123
	logical_and_expression  goto 36
	logical_or_expression  goto 34
	equality_expression  goto 39
	relational_expression  goto 50
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 35
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38
	argument_list  goto 121

state 80
	logical_and_expression:  logical_and_expression LOGICAL_AND.equality_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	equality_expression  goto 124
	relational_expression  goto 50
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 99
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 81
	primary_no_new_array:  primary_no_new_array LB.expression RB 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	expression  goto 125
	assignment_expression  goto 22
	logical_and_expression  goto 36
	logical_or_expression  goto 34
	equality_expression  goto 39
	relational_expression  goto 50
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 35
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 82
	equality_expression:  equality_expression EQ.relational_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	relational_expression  goto 126
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 99
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 83
	equality_expression:  equality_expression NE.relational_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	relational_expression  goto 127
	additive_expression  goto 52
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 99
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 84
	expression:  expression.COMMA assignment_expression 
	primary_no_new_array:  LP expression.RP 

	RP  shift 128
	COMMA  shift 64
	.  error


state 85
	class_type_specifier:  IDENTIFIER.    (18)
	primary_no_new_array:  NEW IDENTIFIER.LP RP 
	primary_no_new_array:  NEW IDENTIFIER.LP argument_list RP 
	primary_no_new_array:  NEW IDENTIFIER.DOT IDENTIFIER LP RP 
	primary_no_new_array:  NEW IDENTIFIER.DOT IDENTIFIER LP argument_list RP 

	LP  shift 129
	DOT  shift 130
	.  reduce 18 (src line 156)


state 86
	array_creation:  NEW basic_type_specifier.dimension_expression_list 
	array_creation:  NEW basic_type_specifier.dimension_expression_list dimension_list 

	LB  shift 133
	.  error

	dimension_expression  goto 132
	dimension_expression_list  goto 131

state 87
	array_creation:  NEW class_type_specifier.dimension_expression_list 
	array_creation:  NEW class_type_specifier.dimension_expression_list dimension_list 

	LB  shift 133
	.  error

	dimension_expression  goto 132
	dimension_expression_list  goto 134

state 88
	relational_expression:  relational_expression GT.additive_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	additive_expression  goto 135
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 99
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 89
	relational_expression:  relational_expression GE.additive_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	additive_expression  goto 136
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 99
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 90
	relational_expression:  relational_expression LT.additive_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	additive_expression  goto 137
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 99
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 91
	relational_expression:  relational_expression LE.additive_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	additive_expression  goto 138
	multiplicative_expression  goto 53
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 99
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 92
	array_literal:  LC expression_list.RC 
	array_literal:  LC expression_list.COMMA RC 
	expression_list:  expression_list.COMMA assignment_expression 

	RC  shift 139
	COMMA  shift 140
	.  error


state 93
	expression_list:  assignment_expression.    (94)

	.  reduce 94 (src line 500)


state 94
	additive_expression:  additive_expression ADD.multiplicative_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	multiplicative_expression  goto 141
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 99
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 95
	additive_expression:  additive_expression SUB.multiplicative_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	multiplicative_expression  goto 142
	unary_expression  goto 54
	postfix_expression  goto 55
	primary_expression  goto 99
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 96
	multiplicative_expression:  multiplicative_expression MUL.unary_expression 

	LP  shift 40
	LC  shift 51
	SUB  shift 56
	INT_LITERAL  shift 41
	DOUBLE_LITERAL  shift 42
	STRING_LITERAL  shift 43
	TRUE_T  shift 44
	FALSE_T  shift 45
	NULL_T  shift 46
	IDENTIFIER  shift 69
	EXCLAMATION  shift 57
	NEW  shift 49
	THIS_T  shift 48
	.  error

	unary_expression  goto 143
	postfix_expression  goto 55
	primary_expression  goto 99
	primary_no_new_array  goto 37
	array_literal  goto 47
	array_creation  goto 38

state 97
	multiplicative_expression:  multiplicative_expression DIV.unary_expression 
